# chess-engine

./: CMakeLists.txt  config.h.in  main.cpp
chess/: Board.h  Board.hpp  File.h  Piece.h  Rank.h  Result.h
search/: Node.cpp  Node.h  Problem.h
